[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Intro.gd" type="Script" id=1]
[ext_resource path="res://resources/atlas_1bit/goblin.atlastex" type="Texture" id=2]
[ext_resource path="res://assets/2d/colored-transparent_packed.png" type="Texture" id=3]
[ext_resource path="res://resources/atlas_white/space.atlastex" type="Texture" id=4]
[ext_resource path="res://resources/atlas_white/A.atlastex" type="Texture" id=5]
[ext_resource path="res://resources/atlas_white/lmb.atlastex" type="Texture" id=6]
[ext_resource path="res://resources/atlas_white/H.atlastex" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 464, 32, 16, 16 )

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Black" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 384.0
margin_bottom = 384.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect6" type="TextureRect" parent="."]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
margin_left = 16.0
margin_top = 336.0
margin_right = 32.0
margin_bottom = 352.0
texture = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 304.0
margin_top = 336.0
margin_right = 368.0
margin_bottom = 352.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
margin_right = 48.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
margin_left = 48.0
margin_right = 64.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="TextureRect5" type="TextureRect" parent="HBoxContainer"]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
margin_left = 48.0
margin_right = 64.0
margin_bottom = 16.0
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 368.0
margin_bottom = 368.0
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[node name="Radial" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
step = 0.75
texture_under = ExtResource( 2 )
texture_progress = SubResource( 1 )
fill_mode = 3
tint_under = Color( 1, 1, 1, 0 )
tint_progress = Color( 0.490196, 0.945098, 0.0745098, 1 )
nine_patch_stretch = true

[node name="LabelSkip" type="Label" parent="."]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 120.0
margin_top = -16.0
margin_right = 184.0
text = "skip"
align = 1
valign = 1

[node name="LabelDebug" type="Label" parent="."]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -32.0
margin_right = -56.0
rect_scale = Vector2( 0.5, 0.5 )
text = "debug view"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 16.0
margin_right = 368.0
margin_bottom = 96.0
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_left = 85.0
margin_right = 283.0
margin_bottom = 12.0
size_flags_horizontal = 4

[node name="LabelAlex" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 70.0
margin_bottom = 12.0
size_flags_horizontal = 4
text = "Music by"
align = 1

[node name="LinkAlex" type="LinkButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 74.0
margin_right = 198.0
margin_bottom = 12.0
focus_mode = 2
size_flags_horizontal = 4
text = "jelloboy.itch.io"

[node name="LabelKenney" type="Label" parent="VBoxContainer"]
margin_left = 102.0
margin_right = 266.0
margin_bottom = 12.0
size_flags_horizontal = 4
text = "Assets by KenneyNL"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 71.0
margin_top = 16.0
margin_right = 297.0
margin_bottom = 28.0
size_flags_horizontal = 4

[node name="LabelGameBy" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 12.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Programmed by"
align = 1

[node name="LinkHare" type="LinkButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 226.0
margin_bottom = 12.0
size_flags_horizontal = 4
text = "hare.itch.io"

[node name="LabelGodot" type="Label" parent="VBoxContainer"]
margin_left = 114.0
margin_top = 32.0
margin_right = 254.0
margin_bottom = 44.0
size_flags_horizontal = 4
text = "Made in Godot 3.5"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_top = 304.0
margin_right = 368.0
margin_bottom = 320.0
__meta__ = {
"_edit_group_": true
}

[node name="LinkJam" type="LinkButton" parent="VBoxContainer2"]
margin_left = 22.0
margin_right = 346.0
margin_bottom = 12.0
focus_mode = 2
size_flags_horizontal = 4
text = "https://itch.io/jam/kenney-jam-2022"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/LinkAlex" to="." method="_on_LinkAlex_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LinkHare" to="." method="_on_LinkHare_pressed"]
[connection signal="pressed" from="VBoxContainer2/LinkJam" to="." method="_on_LinkJam_pressed"]
